# light_dock

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  XdgUtility.h  launcher_bfb_png.h  main.cpp
Graphics/: GraphicsEngine.h  Renderer2D.h  TextureManager.h  WaylandContext.h  WindowTracker.h  shader.h  shaders.h  stb_image.cpp  stb_image.h
Math/: Point.h  Rect.h
launcher/: Icon.h  LauncherIcon.h
layer-shell/: wlr-layer-shell-unstable-v1-protocol.c  wlr-layer-shell-unstable-v1-protocol.h
shaders/: basic.vert  icon_shine.frag  rect.frag  squircle.frag  text.frag  text.vert  texture.frag  vertex.vert
shell/: Docky.h  ShellRuntime.h  UnityShell.h
